# clearstone-fixed-yield

./: .env.devnet  ARCHITECTURE.md  AUDIT_SCOPE.md  Anchor.toml  CURATOR_GUIDE.md  Cargo.toml  DEPLOY.md  DEPLOY_IDS.md  DEVNET_PLAN.md  FOLLOWUPS.md  GOVERNOR_ESCROW_ROLE.md  GOVERNOR_ESCROW_ROLE.patch  INTENT_FLASH_PLAN.md  INTERFACE.md  INVARIANTS.md  KYC_PASSTHROUGH_PLAN.md  MARKET_SETUP.md  PLAN.md  README.md  package.json  testkp.json  tsconfig.json
.claude/: settings.json
deployments/: devnet-vault-init.md  devnet.json
idl/: clearstone_core.json  clearstone_curator.json  clearstone_router.json  generic_exchange_rate_sy.json
periphery/clearstone_curator/: Cargo.toml
periphery/clearstone_curator/src/: lib.rs  roll_delegation.rs
periphery/clearstone_rewards/: Cargo.toml
periphery/clearstone_rewards/src/: lib.rs
periphery/clearstone_router/: Cargo.toml
periphery/clearstone_router/src/: lib.rs
periphery/clearstone_solver_callback/: Cargo.toml
periphery/clearstone_solver_callback/src/: lib.rs
programs/clearstone_core/: Cargo.toml
programs/clearstone_core/src/: constants.rs  error.rs  lib.rs  reentrancy.rs
programs/clearstone_core/src/instructions/: mod.rs  self_cpi.rs  util.rs
programs/clearstone_core/src/instructions/market_two/: buy_yt.rs  deposit_liquidity.rs  flash_swap_pt.rs  mod.rs  sell_yt.rs  trade_pt.rs  withdraw_liquidity.rs
programs/clearstone_core/src/instructions/market_two/admin/: add_farm.rs  add_market_emission.rs  market_two_init.rs  mod.rs  modify_farm.rs  modify_market_setting.rs  realloc_market.rs
programs/clearstone_core/src/instructions/vault/: collect_emission.rs  collect_interest.rs  deposit_yt.rs  merge.rs  stage_yield.rs  strip.rs  withdraw_yt.rs
programs/clearstone_core/src/instructions/vault/admin/: add_emission.rs  add_lp_tokens_metadata.rs  initialize_vault.rs  mod.rs  modify_vault_setting.rs
programs/clearstone_core/src/instructions/vault/admin/treasury/: collect_treasury_emission.rs  collect_treasury_interest.rs
programs/clearstone_core/src/state/: market_two.rs  mod.rs  vault.rs
programs/clearstone_core/src/utils/: sy_cpi.rs
reference_adapters/generic_exchange_rate_sy/: Cargo.toml
reference_adapters/generic_exchange_rate_sy/src/: lib.rs
reference_adapters/kamino_sy_adapter/: Cargo.toml
reference_adapters/kamino_sy_adapter/src/: lib.rs
reference_adapters/malicious_sy_nonsense/: Cargo.toml
reference_adapters/malicious_sy_nonsense/src/: lib.rs
reference_adapters/malicious_sy_reentrant/: Cargo.toml
reference_adapters/malicious_sy_reentrant/src/: lib.rs
reference_adapters/mock_flash_callback/: Cargo.toml
reference_adapters/mock_flash_callback/src/: lib.rs
reference_adapters/mock_klend/: Cargo.toml
reference_adapters/mock_klend/src/: lib.rs
scripts/: README.md  devnet-deploy-init.sh  devnet-deploy.sh  devnet-e2e.ts  devnet-fund.sh  devnet-idl-init.sh  devnet-transfer-upgrade-authority.sh  devnet-verify-hashes.sh
scripts/clearstone_pt_solver/: README.md  package.json  tsconfig.json
scripts/clearstone_pt_solver/src/: clearstone_fusion.json  clearstone_fusion.ts  clients.ts  fill.ts  fusion.ts  index.ts  match.ts  route.ts  sources.ts  state.ts
tests/: clearstone-core.ts  clearstone-curator.ts  clearstone-fusion-flash.ts  clearstone-kyc-pass-through.ts  clearstone-rewards.ts  clearstone-roll-delegation.ts  clearstone-router.ts  fixtures.ts  fusion_sign.ts  kamino_fixtures.ts  kyc_fixtures.ts
