[package]
name = "clearstone_rewards"
version = "0.1.0"
description = "Clearstone periphery: LP staking + farm emissions router. Separate from core — plugs in via SPL transfers."
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "clearstone_rewards"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.31.1", features = ["event-cpi", "init-if-needed"] }
anchor-spl = { version = "0.31.1" }
precise_number = { path = "../../libraries/precise_number" }
getrandom = { version = "=0.2.10", features = ["custom"] }
