[package]
name = "generic_exchange_rate_sy"
version = "0.1.0"
description = "Reference SY adapter for Clearstone fixed-yield core. Wraps an SPL mint behind a manually-pokable exchange rate."
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "generic_exchange_rate_sy"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.31.1", features = ["event-cpi"] }
anchor-spl = { version = "0.31.1" }
precise_number = { path = "../../libraries/precise_number" }
sy_common = { path = "../../libraries/sy_common" }
amount_value = { path = "../../libraries/amount_value" }
getrandom = { version = "=0.2.10", features = ["custom"] }
